Changes for 3.3.0

New features:
A.......S. [ZBX-9425] added permission check on the server side for global script execution (Sergejs)

Bug fixes:
.......PS. [ZBX-11036] fixed server not to synchronize IPMI configuration for new hosts without IPMI (vso)

--------------------------------------------------------------------------------
Changes for 3.2.2rc1

New features:
........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)

Bug fixes:
..F....... [ZBX-11276] removed extra double quotes in host interface form (Gunars)
..F....... [ZBX-11256] synchronized the trigger wizzard form with trigger edit form changes (Gunars)
........S. [ZBX-11300] fixed variable used in forecast function (gleb)
A..G...... [ZBX-11146] fixed validation of item update interval 0 (Gunars, vso)
.......PS. [ZBX-11021] fixed discoverer to log that it has started before SNMP library initialization (vso)
.......PS. [ZBX-11213] fixed database monitoring keys (wiper)

--------------------------------------------------------------------------------
Changes for 3.2.1

Bug fixes:
..F....... [ZBX-11210] fixed link "Help" to a proper version of Zabbix manual (Sasha)

--------------------------------------------------------------------------------
Changes for 3.2.1rc1

New features:
.......PS. [ZBXNEXT-3106] improved concurrent VMware item polling speed, reduced size of cached VMware data (wiper)
A.F....... [ZBX-1357] updated Chinese (China), French, Italian, Portuguese (Brazil) translations; thanks to Zabbix translators (zalex_ua)
..F....... [ZBX-11136] increased width of input fields (Sasha)

Bug fixes:
........S. [ZBX-11204] fixed parameter parsing in calculated items when it contains double quote escaping (Sergejs)
........S. [ZBX-11250] fixed trigger update after executing event correlation 'close new' operation (wiper)
.......PS. [ZBX-5448] fixed possible delay when proxy sends cached history to server (vso)